# NYC_data

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  data_research.ipynb  data_viz.ipynb  daw_main.ipynb  exploration.ipynb  fetch_311_to_duckdb.py  final_submit.ipynb  general_data_wragling.ipynb  manual_map.json  nyc_problem.ipynb  pyproject.toml  requirements.txt
.gitlab/ci/: test_data_quality.yml  test_libs_daw.yml
config/: .env  __init__.py  conifg.py  utils.py
data/: sample-test.parquet
daw_nyc/: __main__.py
daw_nyc/config/: __init__.py  config.py  utils.py
daw_nyc/libs/daw/: __init__.py
daw_nyc/libs/import_data/: __init__.py  fetcher.py  utils.py
daw_nyc/libs/test_setup/: __init__.py  create_test_sample.py  tidying.py
docs/: index.html  styles.css
libs/: __init__.py  calculator.py  create_test_sample.py  db_operations.py  fetcher.py  parser.py  utils.py
libs_daw/: __init__.py  data_cleaner.py  data_integrator.py  data_loader.py  data_transformer.py  pipeline.py  utils.py
libs_tidy/: __init__.py  distribution.py  tidying.py
mappings/: nyc_uhf_zipcodes.json
notebooks/: daw_main.ipynb  import_fresh_nyc_data.ipynb
tests/: conftest.py  test_data_cleaner.py  test_data_integrator.py  test_data_loader.py  test_data_transformer.py  test_pipeline.py
tests/import-tests/: test_distribution.py  utils.py
