[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daw_nyc"]

[project]
name = "daw_nyc"
version = "0.1.0"
description = "Analysis of NYC 311 calls and median rent data for DAW."
authors = [{name="Roberto", email="roberto.fazekas@students.fhnw.ch"}]
maintainers = [{name="Roberto", email="roberto.fazekas@students.fhnw.ch"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "pandas==2.3.2",
  "numpy==2.3.3",
  "matplotlib==3.10.6",
  "seaborn==0.13.2",
  "fastparquet==2024.11.0",
  "requests==2.31.0",
  "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "ipython==9.5.0",
  "ipykernel==6.30.1",
  "jupyter_client==8.6.3",
  "jupyter_core==5.8.1",
  "nbformat==5.10.4",
  "nbstripout==0.8.1",
]

[project.scripts]
daw-run = "daw_nyc.__main__:main"

